# finite-automaton

./: CMakeLists.txt  README.md  cdfa.cpp  cdfa.h  dfa.cpp  dfa.h  finite_automaton.h  nfa.cpp  nfa.h  test.cpp
